--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
                 </div>
                 <% } %>
                 <% } %>
+                <% if(talked.length != 0) { %>
                 <div class="row">
                     <div class="medium-offset-2 medium-4 columns">
                         <div class="question">
@@ -417,6 +418,7 @@
                         <% }); %>
                     </div>
                 </div>
+                <% } %>
                 <div class="row">
                     <div class="medium-offset-2 medium-8 columns">
                         <div class="comments-section">
