sign up fix and login router

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <h2>Sign Up</h2>
               <div class="error" style="display:none"></div>
               <input type="text" id="signup-frat-name" placeholder="Organization Name" />
+              <input type="text" autocorrect="off" autocapitalize="off" id="signup-name" placeholder="Name" />
               <input type="text" autocorrect="off" autocapitalize="off" id="signup-username" placeholder="Username" />
               <input type="password" id="signup-password" placeholder="Create a Password" />
               <div class="text-center"><button>Sign Up</button></div>
