--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
             <% } else { %>
               <% } %>
-    </scrip>
+    </script>
 
     <script type="text/template" id="form-custom-questions">
       <% _.each(formQuestions, function(question, index){ %>
