--- a/index.html
+++ b/index.html
@@ -351,7 +351,21 @@
     </script>
 
 
-
+    <script type="text/template" id="settings-template">
+        <div class="nav" id="header">
+            <div class="small-8 columns">
+                <header ><img src="images/logo_small_alt.png"></header>
+            </div>
+            <div class="small-4 columns">
+                <ul class="right">
+                    <li><a href="/#/rushes">Dashboard</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+          <%= organization.get("name") %>
+        </div>
+    </script>
 
 
     <script type="text/template" id="rush-profile-template">
