--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <title>Helios</title>
     <script src="js/responsive-nav.js"></script>
-    <link href='//fonts.googleapis.com/css?family=Josefin+Slab:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/foundation-icons.css" />
     <link rel="stylesheet" href="css/foundation.css">
     <link href="css/gum.css" media="all" rel="stylesheet" type="text/css"/>
+
     <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.2.13.min.js"></script>
@@ -486,6 +488,121 @@
             </div>
         </div>
     </script>
+
+    <script type="text/template" id="homepage-template">
+<div id="page-top" class="index">
+
+    <!-- Header -->
+    <div class="hero">
+        <div class="row nav">
+            <div class="small-8 columns">
+                <img src="images/logo_small_alt.png">
+            </div>
+            <div class="small-4 columns links">
+                <div class="right">
+                    <ul>
+                        <li><a href="#services">Product</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row hero-text">
+            <div class="small-12 columns text-center">
+                <h2><span style="font-weight:100;">Welcome To </span><span style="font-weight:900;font-style:normal!important;color:#fed136;">HELIOS</span>!</h2>
+                <h1><span style="text-transform:uppercase;font-size:2em;">Simplify your rush process</span></h1>
+                <a href="/#/login" class="page-scroll button">LOGIN</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Services Section -->
+    <section id="services" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="large-12 text-center columns">
+                    <h2 class="section-heading">What We Do</h2>
+                    <h5 class="section-subheading text-muted">Spend more time getting to know future members, less time messing with Google Docs.</h5>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="medium-4 columns">
+                    <div class="icon-circle">
+                        <i class="fi-comments fa-stack-1x fa-inverse"></i>
+                    </div>
+                    <h4 class="service-heading">Discuss</h4>
+                    <p class="text-muted">Comment and vote on every recruit so everyone is always in the loop.</p>
+                </div>
+                <div class="medium-4 columns">
+                    <div class="icon-circle">
+                        <i class="fi-mobile fa-stack-1x fa-inverse"></i>
+                    </div>
+                    <h4 class="service-heading">Mobile First</h4>
+                    <p class="text-muted">Use it from your phone at events and project it onto the screen during deliberations</p>
+                </div>
+                <div class="medium-4 columns">
+                    <div class="icon-circle">
+                        <i class="fi-laptop fa-stack-1x fa-inverse"></i>
+                    </div>
+                    <h4 class="service-heading">Presentation Mode</h4>
+                    <p class="text-muted">View the rushes in a slideshow and save hours of time putting together powerpoints</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Clients Aside -->
+    <section class="clients">
+        <div class="container">
+            <div class="row">
+                <div class="small-12 text-center">
+                    <h2 class="section-heading">Used at the largest Greek schools in the country</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="medium-4 small-12 columns text-center client-image">
+                    <a href="#">
+                        <img src="images/illinois_logo.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="medium-4 small-12 columns text-center client-image">
+                    <a href="#">
+                        <img src="images/uva_logo.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="medium-4 small-12 columns text-center client-image">
+                    <a href="#">
+                        <img src="images/vt_logo.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="large-12 text-center">
+                    <h2 class="section-heading">Contact Us</h2>
+                    <h3 class="section-subheading text-muted">Email us at mjain6 [at] illinois [dot] edu for a free demo</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="medium-4 columns">
+                    <span class="copyright">Copyright &copy; Helios 2015</span>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</div>
+    </script>
+
 
     <script src="/js/vendor/fastclick.js"></script>
     <script src="/js/foundation.min.js"></script>
