--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         </div>
         <div class="row hero-text">
             <div class="small-12 columns text-center">
-                <h2><span style="font-weight:100;">Welcome To </span><span style="font-weight:900;font-style:normal!important;color:#fed136;">HELIOS</span>!</h2>
+                <h2><span style="font-weight:100;">Welcome To </span><span style="font-weight:900;font-style:normal!important;color:#fed136;">HELIOS</span></h2>
                 <h1><span style="text-transform:uppercase;font-size:2em;">Simplify your rush process</span></h1>
                 <a href="/#/login" class="page-scroll button">LOGIN</a>
             </div>
@@ -584,7 +584,7 @@
             <div class="row">
                 <div class="large-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Email us at mjain6 [at] illinois [dot] edu for a free demo</h3>
+                    <h3 class="section-subheading text-muted">Email us at mjain6 [at] illinois [dot] edu for a free demo and quote</h3>
                 </div>
             </div>
         </div>
