--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         <div class="row hero-text">
             <div class="small-12 columns text-center">
                 <h2><span style="font-weight:100;">Welcome To </span><span style="font-weight:900;font-style:normal!important;color:#fed136;">HELIOS</span></h2>
-                <h1><span style="text-transform:uppercase;font-size:2em;">Simplify your rush process</span></h1>
+                <h1><span style="text-transform:uppercase;font-size:1.5em;font-weight:900">Simplify your rush process</span></h1>
                 <a href="/#/login" class="page-scroll button">LOGIN</a>
             </div>
         </div>
