--- a/index.html
+++ b/index.html
@@ -457,9 +457,17 @@
                 </div>
                 <div class="row">
                     <div class="medium-12 columns">
+                        <div class="row">
+                        <div class="small-12 medium-4 columns">
                         <i class="fi-mail contact-method"></i> <%= rushee.get('email') %>
+                        </div>
+                        <div class="small-12 medium-4 columns">
                         <i class="fi-telephone contact-method"></i> <%= rushee.get('phonenumber') %>
+                        </div>
+                        <div class="small-12 medium-4 columns">
                         <i class="fi-home contact-method"></i> <%= rushee.get('residence') %>
+                        </div>
+                        </div>
                     </div>
                 </div>
                 <% if (comment != undefined) { %>
