added marketing images

--- a/index.html
+++ b/index.html
@@ -689,8 +689,27 @@
         </div>
     </section>
 
+    <section class="screenshots">
+        <div class="container">
+            <div class="row">
+                <div class="large-12 text-center columns">
+                    <h2 class="section-heading">Product</h2>
+                    <h5 class="section-subheading text-muted">Compatible with all phones (iOS, Android, etc.) and computers (Windows and Mac)</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="small-12 medium-6 columns">
+                    <img src="images/screenshot_computer2.png" />
+                </div>
+                <div class="small-12 medium-6 columns">
+                    <img src="images/screenshot_phone.png" />
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Clients Aside -->
-    <section class="clients">
+    <section id="clients" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="small-12 text-center">
@@ -717,7 +736,7 @@
         </div>
     </section>
 
-    <section id="contact" class="bg-light-gray">
+    <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="large-12 text-center">
