--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </div>
         <div class="row">
             <div class="small-12 columns text-center">
-                <h1>Events</h1>
+                <h1>Attendees</h1>
             </div>
         </div>
         <div id="rush-list-subview"></div>
