added auto signing if they've already registered

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="small-12 medium-8 medium-offset-2 columns">
                     <label>
                     Hometown, State:
-                    <input type="text" class="required" id="hometown" placeholder="Hometown"/>
+                    <input type="text" class="required" id="hometown" placeholder="Hometown (City, State)"/>
                     </label>
                     <small class="error">Required</small>
                 </div>
